Archive2/1e/7cf020309080b3/output
main.cpp: In function 'int main()':
main.cpp:10:5: error: a function-definition is not allowed here before '{' token
     {
     ^
main.cpp:24:1: error: expected '}' at end of input
 }
 ^
